--- a/index.html
+++ b/index.html
@@ -1,125 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>diecast.scape</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>diecast.scape</title>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0f0f0f;
-      color: #ffffff;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #111;
+  color: #fff;
+}
 
-    header {
-      padding: 20px;
-      text-align: center;
-      background: #111;
-    }
+/* HEADER */
+header {
+  position: sticky;
+  top: 0;
+  background: #000;
+  padding: 15px;
+  text-align: center;
+  font-size: 22px;
+  font-weight: bold;
+  z-index: 10;
+}
 
-    header h1 {
-      margin: 0;
-      font-size: 28px;
-      letter-spacing: 1px;
-    }
+/* SECTION */
+section {
+  padding: 20px;
+}
 
-    header p {
-      color: #aaa;
-      margin-top: 5px;
-    }
+/* HERO */
+.hero {
+  text-align: center;
+}
+.hero p {
+  color: #ccc;
+}
 
-    .instagram-btn {
-      display: inline-block;
-      margin-top: 12px;
-      padding: 10px 18px;
-      background: linear-gradient(45deg, #f58529, #dd2a7b, #8134af);
-      color: #fff;
-      text-decoration: none;
-      border-radius: 25px;
-      font-size: 14px;
-    }
+/* GALLERY */
+.gallery {
+  display: flex;
+  gap: 15px;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+}
+.gallery img {
+  width: 260px;
+  border-radius: 12px;
+  scroll-snap-align: start;
+}
 
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-      gap: 15px;
-      padding: 20px;
-    }
+/* BUTTON */
+.button {
+  display: inline-block;
+  margin-top: 15px;
+  padding: 10px 18px;
+  background: #e1306c;
+  color: white;
+  text-decoration: none;
+  border-radius: 25px;
+}
 
-    .item {
-      background: #1a1a1a;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-    }
-
-    .item img {
-      width: 100%;
-      display: block;
-    }
-
-    .item-info {
-      padding: 10px;
-      text-align: center;
-    }
-
-    .item-info h3 {
-      margin: 5px 0;
-      font-size: 14px;
-    }
-
-    .price {
-      color: #00e676;
-      font-weight: bold;
-      font-size: 14px;
-    }
-
-    footer {
-      text-align: center;
-      padding: 15px;
-      color: #777;
-      font-size: 12px;
-    }
-  </style>
+/* FLOATING INSTAGRAM BUTTON */
+.ig-float {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: #e1306c;
+  color: #fff;
+  padding: 14px 16px;
+  border-radius: 50%;
+  font-size: 20px;
+  text-decoration: none;
+  box-shadow: 0 0 10px #000;
+  z-index: 20;
+}
+</style>
 </head>
 
 <body>
 
-<header>
-  <h1>diecast.scape</h1>
-  <p>Built in scale. Crafted with soul.</p>
-  <a class="instagram-btn" href="https://instagram.com/diecast.scape" target="_blank">
-    Visit Instagram
-  </a>
-</header>
+<header>diecast.scape</header>
 
-<section class="gallery">
-
-  <!-- ITEM 1 -->
-  <div class="item">
-    <img src="porsche.jpg" alt="Porsche Diorama">
-    <div class="item-info">
-      <h3>Porsche Diorama</h3>
-      <div class="price">₹849</div>
-    </div>
-  </div>
-
-  <!-- ITEM 2 -->
-  <div class="item">
-    <img src="nissan.jpg" alt="Nissan Diorama">
-    <div class="item-info">
-      <h3>Nissan Diorama</h3>
-      <div class="price">₹999</div>
-    </div>
-  </div>
-
+<section class="hero">
+  <h2>Built in scale. Crafted with soul.</h2>
+  <p>Handcrafted 1:64 scale dioramas for collectors & photographers</p>
 </section>
 
-<footer>
-  © diecast.scape | Handcrafted 1:64 Dioramas
-</footer>
+<section>
+  <h3>Gallery</h3>
+  <div class="gallery">
+    <img src="image1.jpg">
+    <img src="image2.jpg">
+    <img src="image3.jpg">
+  </div>
+</section>
+
+<section>
+  <h3>Pricing</h3>
+  <p>Starts from ₹849/-</p>
+  <p>Shipping charges extra</p>
+</section>
+
+<section>
+  <h3>Order</h3>
+  <p>DM on Instagram to place your order</p>
+  <a class="button" href="https://instagram.com/diecast.scape" target="_blank">
+    Visit Instagram
+  </a>
+</section>
+
+<!-- FLOATING IG BUTTON -->
+<a class="ig-float" href="https://instagram.com/diecast.scape" target="_blank">
+  IG
+</a>
 
 </body>
 </html>
