--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>diecast.scape</title>
+<title>DIECAST.SCAPE</title>
 
 <style>
 body {
@@ -17,7 +17,7 @@ body {
 header {
   padding: 12px;
   text-align: center;
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 600;
   letter-spacing: 1px;
 }
@@ -26,7 +26,7 @@ header {
   text-align: center;
   font-size: 13px;
   color: #ccc;
-  margin-top: 2px;
+  margin-top: 3px;
 }
 
 .description {
@@ -116,8 +116,8 @@ footer {
 /* FLOATING IG */
 .ig-float {
   position: fixed;
-  bottom: 18px;
-  right: 18px;
+  bottom: 55px;
+  right: 22px;
   background: #FF2E6F;
   color: #fff;
   padding: 12px 14px;
@@ -130,11 +130,13 @@ footer {
 
 <body>
 
-<header>diecast.scape</header>
+<header>DIECAST.SCAPE</header>
 <div class="subtitle">Built in Scale. Crafted with Soul.</div>
 <div class="description">
-Handcrafted 1:64 scale dioramas designed for collectors, photographers,
-and diecast enthusiasts who value realism and detail.
+Handcrafted dioramas designed to elevate your diecast collection.
+Each piece is carefully built with premium materials, realistic details, and precise scale accuracy — perfect for collectors, photographers, and automotive enthusiasts who value craftsmanship over mass production.
+
+Every diorama is made in limited quantities to maintain uniqueness and quality.
 </div>
 
 <!-- DIORAMA -->
