--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ body {
 header {
   padding: 12px;
   text-align: center;
-  font-size: 24px;
-  font-weight: 600;
+  font-size: 27px;
+  font-weight: 800;
   letter-spacing: 1px;
 }
 
@@ -58,11 +58,14 @@ header {
 }
 
 .slider img {
-  width: 85%;
-  max-width: 320px;
-  border-radius: 10px;
+  width: 280px;
+  height: 280px;
+  object-fit: cover;
+  border-radius: 12px;
   scroll-snap-align: start;
+  background: #000;
 }
+
 
 /* PRICE */
 .price {
