Revise order button link and message
Updated order link text and modified the message format.

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ footer {
 Handcrafted dioramas designed to elevate your diecast collection.
 Each piece is carefully built with premium materials, realistic details, and precise scale accuracy — perfect for collectors, photographers, and automotive enthusiasts who value craftsmanship over mass production.
 
+  
 Every diorama is made in limited quantities to maintain uniqueness and quality.
 </div>
 
@@ -161,10 +162,10 @@ Every diorama is made in limited quantities to maintain uniqueness and quality.
   <div class="ship">+ Shipping charges applicable</div>
 
   <a class="buy-btn"
-     href="https://ig.me/m/diecast.scape?text=Hi%20I%20want%20to%20order%20the%20BMW%20Handcrafted%20Diorama%20priced%20at%20₹849%20(29%25%20OFF)."
-     target="_blank">
-     🛒 Order This Diorama
-  </a>
+href="https://ig.me/m/diecast.scape?text=Hi%20I%20want%20to%20order%20the%20BMW%20Handcrafted%20Diorama.%20Final%20price%20849.%20Please%20share%20delivery%20details."
+target="_blank">
+🛒 Order This Diorama
+</a>
 </div>
 
 <footer>
