--- a/index.html
+++ b/index.html
@@ -128,8 +128,42 @@ footer {
   text-decoration: none;
   font-size: 18px;
 }
+  /* FULL IMAGE OVERLAY */
+#lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.9);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+}
+
+#lightbox img {
+  max-width: 95%;
+  max-height: 95%;
+  border-radius: 12px;
+}
+
 </style>
 </head>
+<script>
+function openLightbox(src) {
+  document.getElementById("lightbox-img").src = src;
+  document.getElementById("lightbox").style.display = "flex";
+}
+
+function closeLightbox() {
+  document.getElementById("lightbox").style.display = "none";
+}
+</script>
+
+<div id="lightbox" onclick="closeLightbox()">
+  <img id="lightbox-img">
+</div>
 
 <body>
 
@@ -148,10 +182,10 @@ Every diorama is made in limited quantities to maintain uniqueness and quality.
   <div class="diorama-title">BMW Handcrafted Diorama</div>
 
   <div class="slider">
-    <img src="image1.jpg">
-    <img src="image2.jpg">
-    <img src="image3.jpg">
-    <img src="image34jpg">
+    <img src="image1.jpg" onclick="openLightbox(this.src)">
+    <img src="image2.jpg" onclick="openLightbox(this.src)">
+    <img src="image3.jpg" onclick="openLightbox(this.src)">
+    <img src="image4.jpg" onclick="openLightbox(this.src)">
   </div>
 
   <div class="price">
