Update background and button colors in index.html
Changed background color and button color in CSS.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: #192866;
+  background: #0B132B;
   color: #fff;
 }
 
@@ -99,7 +99,7 @@ header {
 .buy-btn {
   margin-top: 12px;
   display: inline-block;
-  background: #e10600;
+  background: #5BC0BE;
   color: #fff;
   padding: 10px 18px;
   border-radius: 6px;
