Update discount color and order link in index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ header {
 
 .discount {
   font-size: 13px;
-  color: #FF1846;
+  color: #B7FFAD;
   margin-top: 4px;
 }
 
@@ -211,10 +211,11 @@ Every diorama is made in limited quantities to maintain uniqueness and quality.
   <div class="ship">+ Shipping charges applicable</div>
 
   <a class="buy-btn"
-href="https://ig.me/m/diecast.scape?text=Hi%20I%20want%20to%20order%20the%20BMW%20Handcrafted%20Diorama.%20Final%20price%20849.%20Please%20share%20delivery%20details."
+href="https://wa.me/91XXXXXXXXXX?text=Hi%20I%20want%20to%20order%20BMW%20Handcrafted%20Diorama.%20Price%20849.%20Please%20share%20delivery%20details."
 target="_blank">
-🛒 Order This Diorama
+Order on WhatsApp
 </a>
+
 </div>
 
 <footer>
