Update WhatsApp link for BMW Diorama order

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Every diorama is made in limited quantities to maintain uniqueness and quality.
   <div class="ship">+ Shipping charges applicable</div>
 
   <a class="buy-btn"
-href="https://wa.me/91XXXXXXXXXX?text=Hi%20I%20want%20to%20order%20BMW%20Handcrafted%20Diorama.%20Price%20849.%20Please%20share%20delivery%20details."
+href="https://wa.me/917348913798?text=Hi%20I%20want%20to%20order%20BMW%20Handcrafted%20Diorama.%20Price%20849.%20Please%20share%20delivery%20details."
 target="_blank">
 Order on WhatsApp
 </a>
