--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ footer {
   width: 70px;
   height: 70px;
   object-fit: contain;
-  margin-bottom: 6px;
+  margin-bottom: 2px;
 }
 
 </style>
@@ -183,7 +183,7 @@ window.addEventListener("popstate", function () {
 <body>
 
 <header>
-  <img src="logo.png" class="logo"><br>
+  <img src="Logo.png" class="logo"><br>
   DIECAST.SCAPE
 </header>
 
