Enhance header styling and update logo size
Added header styles and adjusted logo dimensions.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@ body {
   background: #0B132B;
   color: #fff;
 }
-
+/* HEADER */
+  header {   
+  padding: 12px;  
+  text-align: center;   
+  font-size: 27px;  
+  font-weight: 800;   
+  letter-spacing: 1px; 
+}
 .subtitle {
   text-align: center;
   font-size: 13px;
@@ -138,8 +145,8 @@ footer {
   border-radius: 12px;
 }
 .logo {
-  width: 300px;
-  height: 300px;
+  width: 120px;
+  height: 90px;
   object-fit: contain;
   margin-bottom: 1px;
 }
@@ -175,6 +182,7 @@ window.addEventListener("popstate", function () {
 
 <header>
   <img src="Logo.png" class="logo"><br>
+  DIECAST.SCAPE
 </header>
 
 <div class="subtitle">Built in Scale. Crafted with Soul.</div>
