--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@ footer {
 }
 
 .logo {
-  width: 44px;
-  height: 44px;
+  width: 80px;
+  height: 80px;
   object-fit: contain;
 }
 
@@ -202,7 +202,7 @@ window.addEventListener("popstate", function () {
 
 <body>
 
-<header class="top-header">
+<header class="header">
   <img src="logo.png" class="logo">
   <div class="brand-name">DIECAST.SCAPE</div>
 </header>
