Rename header class from 'header' to 'top-header'

--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@ window.addEventListener("popstate", function () {
 
 <body>
 
-<header class="header">
+<header class="top-header">
   <img src="logo.png" class="logo">
-  <div class="brand-name">DIECAST.SCAPE</div>
+  <div class="header">DIECAST.SCAPE</div>
 </header>
 
 <div class="subtitle">Built in Scale. Crafted with Soul.</div>
