--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@ body {
   background: #0B132B;
   color: #fff;
 }
-/* HEADER */
-  header {   
-  padding: 12px;  
-  text-align: center;   
-  font-size: 27px;  
-  font-weight: 800;   
-  letter-spacing: 1px; 
-}
+
 .subtitle {
   text-align: center;
   font-size: 13px;
@@ -156,15 +149,22 @@ footer {
 .top-header {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  gap: 12px;
   padding: 12px 16px;
+  position: relative;
 }
 
 .logo {
-  width: 80px;
-  height: 80px;
+  width: 72px;
+  height: 72px;
   object-fit: contain;
+}
+
+/* CENTER BRAND NAME */
+.brand-center {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
 }
 
 .brand-name {
@@ -201,10 +201,13 @@ window.addEventListener("popstate", function () {
 </div>
 
 <body>
-
+  
 <header class="top-header">
-  <img src="logo.png" class="logo">
-  <div class="header">DIECAST.SCAPE</div>
+  <img src="logo.png" class="logo" alt="Diecast Scape Logo">
+
+  <div class="brand-center">
+    <div class="brand-name">DIECAST.SCAPE</div>
+  </div>
 </header>
 
 <div class="subtitle">Built in Scale. Crafted with Soul.</div>
