--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@ body {
 .subtitle {
   text-align: center;
   font-size: 13px;
-  color: #ccc;
+  color: #E8ECEE;
   margin-top: 2px;
 }
 
 .description {
   text-align: center;
   font-size: 14px;
-  color: #aaa;
+  color: #CBCCCD;
   padding: 10px 18px 20px;
   line-height: 1.5;
 }
@@ -101,7 +101,7 @@ body {
 footer {
   text-align: center;
   font-size: 12px;
-  color: #888;
+  color: #A6ABB0;
   padding: 22px 16px;
   border-top: 1px solid #1e1e1e;
 }
@@ -154,8 +154,8 @@ footer {
 }
 
 .logo {
-  width: 72px;
-  height: 72px;
+  width: 90px;
+  height: 90px;
   object-fit: contain;
 }
 
@@ -223,6 +223,23 @@ Each diorama is made in limited quantities to maintain uniqueness and quality.
 
 <!-- DIORAMA -->
 <div class="section">
+  <div class="diorama-title">NISSAN Handcrafted Diorama</div>
+
+  <div class="slider">
+    <img src="image1.jpg" onclick="openLightbox(this.src)">
+    <img src="image2.jpg" onclick="openLightbox(this.src)">
+    <img src="image3.jpg" onclick="openLightbox(this.src)">
+    <img src="image5.jpg" onclick="openLightbox(this.src)">
+  </div>
+
+  <div class="price">
+    <span class="old">₹1199</span>
+    <span class="new">₹849</span>
+  </div>
+  <div class="discount">29% OFF · Save ₹350</div>
+  <div class="ship">+ Shipping charges applicable</div>
+
+  <div class="section">
   <div class="diorama-title">BMW Handcrafted Diorama</div>
 
   <div class="slider">
@@ -238,7 +255,6 @@ Each diorama is made in limited quantities to maintain uniqueness and quality.
   </div>
   <div class="discount">29% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
-
   <a class="buy-btn"
 href="https://wa.me/917348913798?text=Hi%20Diecast.scape%2C%0AI%20want%20to%20order%3A%20BMW%20Handcrafted%20Diorama%0APrice%3A%20%E2%82%B9849%20(29%25%20OFF)%0APlease%20share%20delivery%20details."
 target="_blank">
@@ -252,7 +268,7 @@ Order on WhatsApp
 Connect with us on Instagram <b>@diecast.scape</b><br><br>
 © 2026 Diecast.scape — Handcrafted Scale Dioramas<br>
 All brand names belong to their respective owners.<br><br>
-Thank you for visiting 🤍
+Thank you for visiting 
 </footer>
 
 <a class="wa-float"
