Update image in slider and add WhatsApp order link
Replaced image5 with image4 in the slider and added a WhatsApp order link.

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Each diorama is made in limited quantities to maintain uniqueness and quality.
     <img src="image1.jpg" onclick="openLightbox(this.src)">
     <img src="image2.jpg" onclick="openLightbox(this.src)">
     <img src="image3.jpg" onclick="openLightbox(this.src)">
-    <img src="image5.jpg" onclick="openLightbox(this.src)">
+    <img src="image4.jpg" onclick="openLightbox(this.src)">
   </div>
 
   <div class="price">
@@ -238,6 +238,12 @@ Each diorama is made in limited quantities to maintain uniqueness and quality.
   </div>
   <div class="discount">29% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
+
+    <a class="buy-btn"
+href="https://wa.me/917348913798?text=Hi%20Diecast.scape%2C%0AI%20want%20to%20order%3A%20NISSAN%20Handcrafted%20Diorama%0APrice%3A%20%E2%82%B9849%20(29%25%20OFF)%0APlease%20share%20delivery%20details."
+target="_blank">
+Order on WhatsApp
+    </a>
 
   <div class="section">
   <div class="diorama-title">BMW Handcrafted Diorama</div>
