Update product links for WhatsApp orders

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Perfect for collectors, photographers, and automotive enthusiasts who value craf
 Each diorama is made in limited quantities to maintain uniqueness and quality.
 </div>
 
-<!-- DIORAMA -->
+  <!-- PRODUCT 1 -->
 <div class="section">
   <div class="diorama-title">NISSAN Handcrafted Diorama</div>
 
@@ -236,16 +236,19 @@ Each diorama is made in limited quantities to maintain uniqueness and quality.
     <span class="old">₹1199</span>
     <span class="new">₹849</span>
   </div>
+
   <div class="discount">29% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
 
-    <a class="buy-btn"
-href="https://wa.me/917348913798?text=Hi%20Diecast.scape%2C%0AI%20want%20to%20order%3A%20NISSAN%20Handcrafted%20Diorama%0APrice%3A%20%E2%82%B9849%20(29%25%20OFF)%0APlease%20share%20delivery%20details."
-target="_blank">
-Order on WhatsApp
-    </a>
+  <a class="buy-btn"
+     href="https://wa.me/917348913798?text=Hi%20Diecast.scape%2C%0AI%20want%20to%20order%3A%20NISSAN%20Handcrafted%20Diorama"
+     target="_blank">
+     Order on WhatsApp
+  </a>
+</div>
 
-  <div class="section">
+<!-- PRODUCT 2 -->
+<div class="section">
   <div class="diorama-title">BMW Handcrafted Diorama</div>
 
   <div class="slider">
@@ -259,16 +262,17 @@ Order on WhatsApp
     <span class="old">₹1199</span>
     <span class="new">₹849</span>
   </div>
+
   <div class="discount">29% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
+
   <a class="buy-btn"
-href="https://wa.me/917348913798?text=Hi%20Diecast.scape%2C%0AI%20want%20to%20order%3A%20BMW%20Handcrafted%20Diorama%0APrice%3A%20%E2%82%B9849%20(29%25%20OFF)%0APlease%20share%20delivery%20details."
-target="_blank">
-Order on WhatsApp
-</a>
-
-
+     href="https://wa.me/917348913798?text=Hi%20Diecast.scape%2C%0AI%20want%20to%20order%3A%20BMW%20Handcrafted%20Diorama"
+     target="_blank">
+     Order on WhatsApp
+  </a>
 </div>
+
 
 <footer>
 Connect with us on Instagram <b>@diecast.scape</b><br><br>
