Add footer section with social links and policies

--- a/index.html
+++ b/index.html
@@ -173,6 +173,49 @@ footer {
   letter-spacing: 1px;
 }
 
+  .site-footer {
+  background: #0B132B;
+  border-top: 1px solid #1e1e1e;
+  padding: 30px 16px;
+  color: #A6ABB0;
+}
+
+.footer-social {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.footer-social a {
+  margin: 0 10px;
+  color: #5BC0BE;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.footer-grid {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.footer-grid h4 {
+  color: #fff;
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+.footer-grid p {
+  font-size: 13px;
+  margin: 6px 0;
+}
+
+.footer-copy {
+  text-align: center;
+  font-size: 12px;
+  margin-top: 25px;
+  color: #777;
+}
 
 </style>
 </head>
@@ -315,5 +358,34 @@ target="_blank">
 </a>
 
 </body>
+  <footer class="site-footer">
+  <div class="footer-social">
+    <a href="https://instagram.com/diecast.scape" target="_blank">Instagram</a>
+    <a href="https://wa.me/917348913798" target="_blank">WhatsApp</a>
+  </div>
+
+  <div class="footer-grid">
+    <div>
+      <h4>POLICIES</h4>
+      <p>Privacy Policy</p>
+      <p>Shipping Policy</p>
+      <p>Return & Cancellation</p>
+      <p>Terms of Service</p>
+    </div>
+
+    <div>
+      <h4>INFORMATION</h4>
+      <p>About Us</p>
+      <p>Contact Us</p>
+      <p>FAQ</p>
+      <p>Order via WhatsApp</p>
+    </div>
+  </div>
+
+  <div class="footer-copy">
+    © 2026 Diecast.scape — All rights reserved
+  </div>
+</footer>
+
 </html>
 
